cleaned the  code of  irrigation-water-source

--- a/app/views/current/views/water/irrigation-water-source.html
+++ b/app/views/current/views/water/irrigation-water-source.html
@@ -24,31 +24,31 @@
             </legend>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-current-1" name="irrigation-current" type="checkbox" value="Peak flow" {{ checked("irrigation-current", "Peak flow") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-current-1" name="irrigation-current" type="checkbox" value="Peak-flow surface water" {{ checked("irrigation-current", "Peak-flow surface water") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-1">
                   Peak-flow surface water
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-current-2" name="irrigation-current" type="checkbox" value="Bore hole" {{ checked("irrigation-current", "Bore hole") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-current-2" name="irrigation-current" type="checkbox" value="Bore hole/aquifer" {{ checked("irrigation-current", "Bore hole/aquifer") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-2">
                   Bore hole/aquifer
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-current-3" name="irrigation-current" type="checkbox" value="Rain water" {{ checked("irrigation-current", "Rain water") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-current-3" name="irrigation-current" type="checkbox" value="Rain water harvesting" {{ checked("irrigation-current", "Rain water harvesting") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-3">
                   Rain water harvesting
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-current-4" name="irrigation-current" type="checkbox" value="Surface abstraction" {{ checked("irrigation-current", "Surface abstraction") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-current-4" name="irrigation-current" type="checkbox" value="Summer water surface abstraction" {{ checked("irrigation-current", "Summer water surface abstraction") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-4">
                   Summer water surface abstraction
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-current-5" name="irrigation-current" type="checkbox" value="mains" {{ checked("irrigation-current", "mains") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-current-5" name="irrigation-current" type="checkbox" value="Mains" {{ checked("irrigation-current", "Mains") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-current-5">
                   Mains
                 </label>
@@ -72,25 +72,25 @@
             </legend>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-target-1" name="irrigation-target" type="checkbox" value="Peak flow" {{ checked("irrigation-target", "Peak flow") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-target-1" name="irrigation-target" type="checkbox" value="Peak-flow surface water" {{ checked("irrigation-target", "Peak-flow surface water") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-1">
                   Peak-flow surface water
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-target-2" name="irrigation-target" type="checkbox" value="Bore hole" {{ checked("irrigation-target", "Bore hole") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-target-2" name="irrigation-target" type="checkbox" value="Bore hole/aquifer" {{ checked("irrigation-target", "Bore hole/aquifer") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-2">
                   Bore hole/aquifer
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-target-3" name="irrigation-target" type="checkbox" value="Surface abstraction" {{ checked("irrigation-target", "Surface abstraction") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-target-3" name="irrigation-target" type="checkbox" value="Summer water surface abstraction" {{ checked("irrigation-target", "Summer water surface abstraction") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-3">
                   Summer water surface abstraction
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-target-4" name="irrigation-target" type="checkbox" value="mains" {{ checked("irrigation-target", "mains") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-target-4" name="irrigation-target" type="checkbox" value="Mains" {{ checked("irrigation-target", "Mains") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-target-4">
                   Mains
                 </label>
