made the yes and no uppercase

--- a/app/views/current/views/water/collaboration.html
+++ b/app/views/current/views/water/collaboration.html
@@ -26,13 +26,13 @@
 
             <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="collaboration" name="collaboration" type="radio" value="yes" {{ checked("collaboration", "yes") }}>
+                <input class="govuk-radios__input" id="collaboration" name="collaboration" type="radio" value="Yes" {{ checked("collaboration", "Yes") }}>
                 <label class="govuk-label govuk-radios__label" for="collaboration">
                   Yes
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="collaboration-2" name="collaboration" type="radio" value="no" {{ checked("collaboration", "no") }}>
+                <input class="govuk-radios__input" id="collaboration-2" name="collaboration" type="radio" value="No" {{ checked("collaboration", "No") }}>
                 <label class="govuk-label govuk-radios__label" for="collaboration-2">
                   No
                 </label>
