--- a/app/views/current/views/water/next-steps.html
+++ b/app/views/current/views/water/next-steps.html
@@ -15,7 +15,7 @@
         <div class="govuk-body">
             <h1 class="govuk-heading-xl govuk-!-padding-left-2">Next steps</h1>
             <div class="govuk-warning-text">
-                <span class="govuk-warning-text__icon" aria-hidden="true">1</span>
+                <span class="govuk-warning-text__icon govuk-!-font-size-19" aria-hidden="true">1</span>
                 <strong class="govuk-warning-text__text govuk-!-font-size-27">
                      Submit your details
                 </strong>
@@ -25,7 +25,7 @@
                 You’ll get an email with your score and answers, and a reference<br> number.
             </div><br>
             <div class="govuk-warning-text">
-                <span class="govuk-warning-text__icon" aria-hidden="true">2</span>
+                <span class="govuk-warning-text__icon govuk-!-font-size-19" aria-hidden="true">2</span>
                 <strong class="govuk-warning-text__text govuk-!-font-size-27">
                      RPA will email you when applications open
                 </strong>
