--- a/app/views/current/views/water/planning-permission.html
+++ b/app/views/current/views/water/planning-permission.html
@@ -19,9 +19,10 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Does the project need planning permission?
+                Does the project need<br> planning permission?
               </h1>
             </legend>
+            <br>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="planning-permission" name="planning-permission" type="radio" value="not needed" {{ checked("planning-permission", "not needed") }}>
