--- a/app/views/current/views/water/productivity.html
+++ b/app/views/current/views/water/productivity.html
@@ -16,8 +16,8 @@ productivity? {% endblock %} {% block beforeContent %}
           <br>
           <div class="govuk-body">
           <p>
-            Productivity is about how much is produced relative to inputs (eg
-            increased yield for the same inputs or the same yield with lower
+            Productivity is about how much is produced relative to<br> inputs (eg
+            increased yield for the same inputs or the same<br> yield with lower
             inputs).
           </p>
           <p class="govuk-caption-m">Select one or two options</p>
@@ -85,7 +85,7 @@ productivity? {% endblock %} {% block beforeContent %}
           </div>
         </fieldset>
       </div>
-      <br>
+      <br><br>
       <button
         class="govuk-button govuk-!-margin-right-1"
         data-module="govuk-button"
