--- a/app/views/current/views/water/business.html
+++ b/app/views/current/views/water/business.html
@@ -16,7 +16,7 @@
       <form class="form" action="{{ nextUrl }}" method="post">
 
         <h1 class="govuk-heading-l">
-          Project and business details
+          Business details
         </h1>
 
         <div class="govuk-form-group">
@@ -42,25 +42,25 @@
           <span id="employees-hint" class="govuk-hint">Full-time employees, including the owner</span>
           <input class="govuk-input govuk-input--width-10" id="employees" name="employees" type="text" spellcheck="false" aria-describedby="employees-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['employees'] }}">
         </div>
-
+        <br>
         <div class="govuk-form-group">
           <label class="govuk-label" for="turnover">
               Business turnover (£)
           </label>
           <div class="govuk-input__wrapper">
           <div class="govuk-input__prefix" aria-hidden="true">£</div>  
-          <input class="govuk-input govuk-input--width-10" id="turnover" name="turnover" type="text" spellcheck="false" aria-describedby="turnover-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['turnover'] }}">
+          <input class="govuk-input govuk-input--width-5" id="turnover" name="turnover" type="text" spellcheck="false" aria-describedby="turnover-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['turnover'] }}">
           </div>
         </div>
-
+        <br>
         <div class="govuk-form-group">
           <label class="govuk-label" for="sbi">
-              SBI
+              Single Business Identifier(SBI)
           </label>
           <span id="sbi-hint" class="govuk-hint">If you do not have an SBI, leave it blank</span>
           <input class="govuk-input govuk-input--width-10" id="sbi" name="sbi" type="text" spellcheck="false" aria-describedby="sbi-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['sbi'] }}">
         </div>
-
+        <br><br>
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
           Continue
         </button>
