--- a/app/views/current/views/water/project-cost.html
+++ b/app/views/current/views/water/project-cost.html
@@ -17,21 +17,22 @@
 
         <div class="govuk-form-group">
           <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="project-cost">
-              What is the estimated cost of the items?
+              What is the estimated cost<br> of the items?
             </label>
           </h1>
           <div id="account-number-hint" class="govuk-hint">
              You can only apply for a grant of up to 40% of the estimated costs.Do not include VAT.
           </div>
+          <br>
           <div class="govuk-body">
            Pounds
           <span class="govuk-caption-m">For example 95000</span>
-          <div class="govuk-input__wrapper">
+          <div class="govuk-input__wrapper govuk-!-margin-top-4">
           <span  class="govuk-input__prefix" aria-hidden="true">£</span> <input class="govuk-input govuk-input--width-10" id="project-cost" name="project-cost" type="text" spellcheck="false" aria-describedby="project-cost-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['project-cost'] }}">
           </div>
           </div>
         </div>
-        <br>
+        <br><br>
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
         {% if data['COMPLETED'] == true %}
