changed the text

--- a/app/views/current/views/water/project-items.html
+++ b/app/views/current/views/water/project-items.html
@@ -128,9 +128,9 @@
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="project-items-17" name="project-items" type="checkbox" value="Ebb and flood or capillary bed" {{ checked("project-items", "Ebb and flood or capillary bed") }}>
+                <input class="govuk-checkboxes__input" id="project-items-17" name="project-items" type="checkbox" value="Ebb and flow" {{ checked("project-items", "Ebb and flow") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="project-items-17">
-                  Ebb and flood or capillary bed
+                  Ebb and flow
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
