deleted space for the question

--- a/app/views/current/views/water/water-SSSI.html
+++ b/app/views/current/views/water/water-SSSI.html
@@ -14,7 +14,7 @@
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
-                Does the project directly impact a<br> Site of Special Scientific Intrest?
+                Does the project directly impact a Site of Special Scientific Intrest?
             </h1>
           </legend>
           <br><br>
