changed the title project-items

--- a/app/views/current/views/water/project-items.html
+++ b/app/views/current/views/water/project-items.html
@@ -19,7 +19,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="project-items-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Which items does your project need?
+                Which eligible items does your project need?
               </h1>
             </legend>
             <br>
