--- a/app/views/current/views/water/applying.html
+++ b/app/views/current/views/water/applying.html
@@ -21,14 +21,13 @@
               </h1>
             </legend>
             <br><br>
-            <div class="govuk-radios">
+            <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="applicant-1" name="applicant" type="radio" value="Farmer" {{ checked("applicant", "Farmer") }}>
                 <label class="govuk-label govuk-radios__label" for="applicant-1">
                   Farmer
                 </label>
               </div>
-              <br>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="applicant-3" name="applicant" type="radio" value="Agent" {{ checked("applicant", "Agent") }}>
                 <label class="govuk-label govuk-radios__label" for="applicant-3">
