changed the text irrigated-crops

--- a/app/views/current/views/water/irrigated-crops.html
+++ b/app/views/current/views/water/irrigated-crops.html
@@ -39,7 +39,7 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="irrigated-crops-3" name="irrigated-crops" type="radio" value="Fruit" {{ checked("irrigated-crops", "Fruit") }}>
                 <label class="govuk-label govuk-radios__label" for="irrigated-crops-3">
-                  Fruit(e.g. fruit,bush fruit)
+                  Fruit (eg fruit, bush fruit)
                 </label>
               </div>
             </div>
