--- a/app/views/current/views/water/your-details.html
+++ b/app/views/current/views/water/your-details.html
@@ -18,15 +18,15 @@
 
         <h1 class="govuk-heading-l">Agent's details </h1>
           <div class="govuk-!-margin-bottom-6">
-            <label class="govuk-label" for="other-applicant-title">
+            <label class="govuk-label" for="agent-details">
               Title(optional)
             </label>
-            <select class="govuk-select" id="other-applicant-title" name="other-applicant-title"  onchange="functionValue()">
-              <option id="Mr" name="Mr" value="Mr"        {% if( data["other-applicant-title"] === "Mr" ) %} selected {% endif %} >Mr</option>
-              <option id="Miss" name="Miss"  value="Miss" {% if( data["other-applicant-title"] === "Miss" ) %} selected {% endif %} >Miss</option>
-              <option id="Ms" name="Ms" value="Ms"        {% if( data["other-applicant-title"] === "Ms" ) %} selected {% endif %} >Ms</option>
-              <option id="Mrs" name="Mrs" value="Mrs"     {% if( data["other-applicant-title"] === "Mrs" ) %} selected {% endif %} >Mrs</option>
-              <option id="Dr" name="Dr" value="Dr"        {% if( data["other-applicant-title"] === "Dr" ) %} selected {% endif %} >Dr</option>
+            <select class="govuk-select" id="agent-details" name="agent-details">
+              <option id="Mr" name="Mr" value="Mr"        {% if( data["agent-details"] === "Mr" ) %} selected {% endif %} >Mr</option>
+              <option id="Mrs" name="Mrs" value="Mrs"     {% if( data["agent-details"] === "Mrs" ) %} selected {% endif %} >Mrs</option>
+              <option id="Ms" name="Ms" value="Ms"        {% if( data["agent-details"] === "Ms" ) %} selected {% endif %} >Ms</option>
+              <option id="Miss" name="Miss"  value="Miss" {% if( data["agent-details"] === "Miss" ) %} selected {% endif %} >Miss</option>
+              <option id="Dr" name="Dr" value="Dr"        {% if( data["agent-details"] === "Dr" ) %} selected {% endif %} >Dr</option>
             </select>
           </div>
         <div class="govuk-form-group">
@@ -51,16 +51,16 @@
         {% else %}
         <h1 class="govuk-heading-l"> Farmer's details</h1>
         <div class="govuk-!-margin-bottom-6">
-          <label class="govuk-label" for="other-applicant-title">
+          <label class="govuk-label" for="farmer-details">
             Title(optional)
           </label>
-          <select class="govuk-select" id="other-applicant-title" name="other-applicant-title"  onchange="functionValue()">
-            <option id="Mr" name="Mr" value="Mr" >Mr</option>
-            <option id="Miss" name="Miss"  value="Miss">Miss</option>
-            <option id="Ms" name="Ms" value="Ms">Ms</option>
-            <option id="Mrs" name="Mrs" value="Mrs">Mrs</option>
-            <option id="Dr" name="Dr" value="Dr">Dr</option>
-           </select>
+           <select class="govuk-select" id="farmer-details" name="farmer-details">
+              <option id="Mr" name="Mr" value="Mr"        {% if( data["farmer-details"] === "Mr" ) %} selected {% endif %} >Mr</option>
+              <option id="Mrs" name="Mrs" value="Mrs"     {% if( data["farmer-details"] === "Mrs" ) %} selected {% endif %} >Mrs</option>
+              <option id="Ms" name="Ms" value="Ms"        {% if( data["farmer-details"] === "Ms" ) %} selected {% endif %} >Ms</option>
+              <option id="Miss" name="Miss"  value="Miss" {% if( data["farmer-details"] === "Miss" ) %} selected {% endif %} >Miss</option>
+              <option id="Dr" name="Dr" value="Dr"        {% if( data["farmer-details"] === "Dr" ) %} selected {% endif %} >Dr</option>
+          </select>
         </div>
         <div class="govuk-form-group">
           <label class="govuk-label" for="farmer-firstname">
@@ -82,13 +82,6 @@
 
       </form>
     </div>
-     <script>
-          function functionValue(){
-              let x = document.getElementById("other-applicant-title").value;
-              
-              console.log(x);
-          } 
-      </script>
   </div>
 
     {% endif %}
