deleted strong for title

--- a/app/views/current/views/water/irrigated-land.html
+++ b/app/views/current/views/water/irrigated-land.html
@@ -21,7 +21,7 @@
           </h1>
           <br>
           <div class="govuk-body govuk-!-margin-bottom-0">
-          <strong>Hectares</strong>
+          Hectares
           <p id="irrigated-land-current-hint" class="govuk-hint">
             Enter figure in hectares, for example 543.5
           </p>
@@ -39,7 +39,7 @@
           </h1>
           <br>
           <div class="govuk-body govuk-!-margin-bottom-0">
-          <strong>Hectares</strong>
+          Hectares
           <p id="irrigated-land-target-hint" class="govuk-hint">
             Enter figure in hectares, for example 543.5
           </p>
