added public beta option

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,6 +20,11 @@
 
       <dl class="govuk-list">
         <dt><a href="/current/views/">Version 07</a></dt>
+        <dd>Beta - Public</dd>
+      </dl>
+
+      <dl class="govuk-list">
+        <dt><a href="/v7-privateBeta/views/">Version 07</a></dt>
         <dd>Beta - Private</dd>
       </dl>
 
