farming-type page -added space

--- a/app/views/current/views/water/farming-type.html
+++ b/app/views/current/views/water/farming-type.html
@@ -18,7 +18,7 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <span class="govuk-caption-m">Question 1 of 18 </span>
+              <span class="govuk-caption-m govuk-!-padding-bottom-1">Question 1 of 18 </span>
               <h1 class="govuk-fieldset__heading">
                 What crops are you growing?
               </h1>
