legal status-public beta changes

--- a/app/views/current/views/water/legal-status.html
+++ b/app/views/current/views/water/legal-status.html
@@ -18,8 +18,9 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <span class="govuk-caption-m govuk-!-padding-bottom-1">Question 2 of 18 </span>
               <h1 class="govuk-fieldset__heading">
-                What is the legal status of the farm business?
+                What is the legal status of the farm business
               </h1>
             </legend>
             <br><br>
@@ -85,6 +86,27 @@
                 </label>
               </div>
             </div>
+            <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
+                <summary class="govuk-details__summary">
+                    <span class="govuk-details__summary-text">
+                        Eligibility
+                    </span>
+                </summary>
+                <div class="govuk-details__text">
+                    You can apply if you are:
+                    <ul>
+                      <li>Sole trader</li>
+                      <li>Partnership</li>
+                      <li>Ltd company</li>
+                      <li>Charity</li>
+                      <li>Public organisation</li>
+                      <li>Trust</li>
+                      <li>Limited liability partnership</li>
+                      <li>Community interest company  </li>
+                      <li>Local authority </li>
+                    </ul>
+                </div>
+              </details>
           </fieldset>
         </div>
         <br><br>
