--- a/app/views/current/views/water/country.html
+++ b/app/views/current/views/water/country.html
@@ -18,6 +18,7 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <span class="govuk-caption-m govuk-!-padding-bottom-1">Question 3 of 18 </span>
               <h1 class="govuk-fieldset__heading">
                 Is the planned project in England?
               </h1>
@@ -47,6 +48,19 @@
                 </label>
               </div>
             </div>
+            <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
+                <summary class="govuk-details__summary">
+                    <span class="govuk-details__summary-text">
+                        Eligibility
+                    </span>
+                </summary>
+                <div class="govuk-details__text">
+                    This is only for projects in England. 
+                    <a href="https://www.mygov.scot/environment-farm-marine/rural/payments-funding-grants/" target="_blank">Scotland</a>, 
+                    <a href="https://gov.wales/rural-grants-payments" target="_blank">Wales</a> and 
+                    <a href="https://www.daera-ni.gov.uk/topics/grants-and-funding" target="_blank">Northern Ireland<a> have similar grants available. 
+                </div>
+              </details>
           </fieldset>
         </div>
         <br><br>
