--- a/app/views/current/views/water/tenancy-length.html
+++ b/app/views/current/views/water/tenancy-length.html
@@ -18,6 +18,7 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <span class="govuk-caption-m govuk-!-padding-bottom-1">Question 5a of 18 </span>
               <h1 class="govuk-fieldset__heading">
                 Is the planned project on land with a tenancy agreement in place until 2026 or after?
               </h1>
@@ -37,9 +38,19 @@
                 </label>
               </div>
             </div>
+            <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
+                <summary class="govuk-details__summary">
+                    <span class="govuk-details__summary-text">
+                        Eligibility
+                    </span>
+                </summary>
+                <div class="govuk-details__text">
+                   The land must be owned or have a tenancy in place until 2026 <br> before starting the project.
+                </div>
+              </details>
           </fieldset>
         </div>
-        <br><br>
+        <br>
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
         {% if data['COMPLETED'] == true %}
