new changes water-sssi

--- a/app/views/current/views/water/water-SSSI.html
+++ b/app/views/current/views/water/water-SSSI.html
@@ -13,6 +13,7 @@
     <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+            <span class="govuk-caption-m govuk-!-padding-bottom-1">Question 11 of 18 </span>
             <h1 class="govuk-fieldset__heading">
                 Does the project directly impact a Site of Special Scientific Intrest?
             </h1>
