--- a/app/views/current/views/water/remaining-costs.html
+++ b/app/views/current/views/water/remaining-costs.html
@@ -20,6 +20,7 @@ Meeting the remaining project costs
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+            <span class="govuk-caption-m govuk-!-padding-bottom-1">Question 8 of 18 </span>
             <h1 class="govuk-fieldset__heading">
               Can you pay the remaining costs of £{{ remainingCosts | toFixed(2) | commafy }}?
             </h1>
