--- a/app/views/current/views/water/project-cost.html
+++ b/app/views/current/views/water/project-cost.html
@@ -16,6 +16,7 @@
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
         <div class="govuk-form-group">
+          <span class="govuk-caption-m govuk-!-padding-bottom-1">Question 7 of 18 </span>
           <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="project-cost">
               What is the estimated cost<br> of the items?
             </label>
