--- a/app/views/current/views/water/productivity.html
+++ b/app/views/current/views/water/productivity.html
@@ -9,13 +9,14 @@ productivity? {% endblock %} {% block beforeContent %}
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+            <span class="govuk-caption-m govuk-!-padding-bottom-1">Question 17 of 18 </span>
             <h1 class="govuk-fieldset__heading">
               How will the project improve productivity?
             </h1>
           </legend>
           <br>
           <div class="govuk-body">
-          <p>
+          <p class="govuk-caption-m">
             Productivity is about how much is produced relative to<br> inputs (eg
             increased yield for the same inputs or the same<br> yield with lower
             inputs).
@@ -83,6 +84,19 @@ productivity? {% endblock %} {% block beforeContent %}
               </label>
             </div>
           </div>
+          <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
+                <summary class="govuk-details__summary">
+                    <span class="govuk-details__summary-text">
+                        Funding  priorities 
+                    </span>
+                </summary>
+                <div class="govuk-details__text">
+                   RPA wants to fund projects that: 
+                   <ul>
+                    <li>improve productivity </li>
+                   </ul>
+                </div>
+             </details>    
         </fieldset>
       </div>
       <br><br>
