--- a/app/views/current/views/water/planning-permission.html
+++ b/app/views/current/views/water/planning-permission.html
@@ -18,6 +18,7 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <span class="govuk-caption-m govuk-!-padding-bottom-1">Question 9 of 18 </span>
               <h1 class="govuk-fieldset__heading">
                 Does the project need planning permission?
               </h1>
@@ -53,7 +54,7 @@
             <details class="govuk-details" data-module="govuk-details">
               <summary class="govuk-details__summary">
                 <span class="govuk-details__summary-text">
-                  Help
+                  Eligibility
                 </span>
               </summary>
               <div class="govuk-details__text">
