new changes irrigation-water

--- a/app/views/current/views/water/irrigation-water-source.html
+++ b/app/views/current/views/water/irrigation-water-source.html
@@ -18,6 +18,7 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <span class="govuk-caption-m govuk-!-padding-bottom-1">Question 15 of 18 </span>
               <h1 class="govuk-fieldset__heading">
                 Where does your current irrigation water come from?
               </h1>
@@ -106,6 +107,20 @@
                 </label>
               </div>
             </div>
+           <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
+                <summary class="govuk-details__summary">
+                    <span class="govuk-details__summary-text">
+                        Funding  priorities 
+                    </span>
+                </summary>
+                <div class="govuk-details__text">
+                   RPA wants to fund projects that: 
+                   <ul>
+                    <li>improve the environment</li>
+                    <li>improve water sustainability</li>
+                   </ul>
+                </div>
+            </details> 
           </fieldset>
         </div>
         <br><br>
