--- a/app/views/current/views/water/irrigation-systems.html
+++ b/app/views/current/views/water/irrigation-systems.html
@@ -18,6 +18,7 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <span class="govuk-caption-m govuk-!-padding-bottom-1">Question 16 of 18 </span>
               <h1 class="govuk-fieldset__heading">
                 What systems are currently used to irrigate?
               </h1>
@@ -130,6 +131,20 @@
                 </label>
               </div>
             </div>
+            <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
+                <summary class="govuk-details__summary">
+                    <span class="govuk-details__summary-text">
+                        Funding  priorities 
+                    </span>
+                </summary>
+                <div class="govuk-details__text">
+                   RPA wants to fund projects that: 
+                   <ul>
+                    <li>improve the environment</li>
+                    <li>improve water sustainability </li>
+                   </ul>
+                </div>
+             </details>    
           </fieldset>
         </div>
         <br>
