--- a/app/views/current/views/water/irrigated-land.html
+++ b/app/views/current/views/water/irrigated-land.html
@@ -15,6 +15,7 @@
 
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
         <div class="govuk-form-group">
+          <span class="govuk-caption-m govuk-!-padding-bottom-1">Question 14 of 18 </span>
           <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="irrigated-land-current">
               How much land is currently irrigated per year? 
             </label>
@@ -39,19 +40,30 @@
           </h1>
           <br>
           <div class="govuk-body govuk-!-margin-bottom-0">
-          Hectares
+              Hectares
           <p id="irrigated-land-target-hint" class="govuk-hint">
-            Enter figure in hectares, for example 543.5
+             Enter figure in hectares, for example 543.5
           </p>
           </div>
           <div class="govuk-input__wrapper">
-          <input class="govuk-input govuk-!-width-one-quarter" id="irrigated-land-target" name="irrigated-land-target" type="text" spellcheck="false" aria-describedby="irrigated-land-target-hint" value="{{ data['irrigated-land-target'] }}">
-          <div class="govuk-input__suffix" aria-hidden="true">ha</div>
-        </div>
-        <br><br>
-       
-        <br>
-        <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
+            <input class="govuk-input govuk-!-width-one-quarter" id="irrigated-land-target" name="irrigated-land-target" type="text" spellcheck="false" aria-describedby="irrigated-land-target-hint" value="{{ data['irrigated-land-target'] }}">
+              <div class="govuk-input__suffix" aria-hidden="true">ha</div>
+          </div>
+          <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
+                <summary class="govuk-details__summary">
+                    <span class="govuk-details__summary-text">
+                        Funding  priorities 
+                    </span>
+                </summary>
+                <div class="govuk-details__text">
+                   RPA wants to fund projects that: 
+                   <ul>
+                    <li>improve productivity</li>
+                   </ul>
+                </div>
+              </details>
+        
+        <button class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-6" data-module="govuk-button">
           Continue
         </button>
 
