--- a/app/views/current/views/water/irrigated-crops.html
+++ b/app/views/current/views/water/irrigated-crops.html
@@ -18,6 +18,7 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <span class="govuk-caption-m govuk-!-padding-bottom-1">Question 13 of 18 </span>
               <h1 class="govuk-fieldset__heading">
                 What main crops will be irrigated?
               </h1>
@@ -42,6 +43,19 @@
                   Fruit (eg fruit, bush fruit)
                 </label>
               </div>
+              <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
+                <summary class="govuk-details__summary">
+                    <span class="govuk-details__summary-text">
+                        Funding  priorities 
+                    </span>
+                </summary>
+                <div class="govuk-details__text">
+                   RPA wants to fund projects that: 
+                   <ul>
+                    <li>improve productivity</li>
+                   </ul>
+                </div>
+              </details>
             </div>
           </fieldset>
         </div>
