--- a/app/views/current/views/water/collaboration.html
+++ b/app/views/current/views/water/collaboration.html
@@ -18,10 +18,11 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="collaboration-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <span class="govuk-caption-m govuk-!-padding-bottom-1">Question 18 of 18 </span>
               <h1 class="govuk-fieldset__heading">
                 Will water be supplied to other farms?
               </h1>
-              <h3 class="govuk-caption-m">If you intend to supply water via a water sharing agreement as a result of this project.</h3>
+              <h3 class="govuk-caption-m">If you intend to supply water via a water sharing agreement<br> as a result of this project.</h3>
             </legend>
 
             <div class="govuk-radios govuk-radios--inline">
@@ -38,6 +39,19 @@
                 </label>
               </div>
             </div>
+            <details class="govuk-details govuk-!-margin-top-9" data-module="govuk-details">
+                <summary class="govuk-details__summary">
+                    <span class="govuk-details__summary-text">
+                        Funding  priorities 
+                    </span>
+                </summary>
+                <div class="govuk-details__text">
+                   RPA wants to fund projects that: 
+                   <ul>
+                    <li>improve water sustainability  </li>
+                   </ul>
+                </div>
+             </details>   
           </fieldset>
         </div>
         <br>
