new changes answers

--- a/app/views/current/views/water/answers.html
+++ b/app/views/current/views/water/answers.html
@@ -59,9 +59,9 @@
       </td>
       <td class="govuk-table__cell">
         <div class="govuk-!-margin-9">
-        <p>Improving productivity<br>
-        Reducing environmental impact<br>
-        Security of water supply</p>
+        <p>Improve productivity<br>
+        Improve the environment<br>
+        Improve water sustainability</p>
         </div>
       </td>
       <td class="govuk-table__cell">
@@ -86,7 +86,7 @@
       </td>
       <td class="govuk-table__cell">
         <div class="govuk-!-margin-9">
-        <p>Improving productivity</p>
+        <p>Improve productivity </p>
         </div>
       </td>
       <td class="govuk-table__cell">
@@ -123,7 +123,7 @@
       <td class="govuk-table__cell">
         <br><br>
         <div class="govuk-!-margin-9">
-          Improving productivity
+          Improve productivity 
         </div>  
       </td>
       <td class="govuk-table__cell">
@@ -163,8 +163,8 @@
       </td>
       <td class="govuk-table__cell">
         <div class="govuk-!-margin-9">
-        <p>Reducing environmental impact<br>
-        Security of water supply</p>
+        <p>Improve the environment<br>
+        Improve water sustainability</p>
         </div>
       </td>
       <td class="govuk-table__cell">
@@ -205,8 +205,8 @@
       </td>
       <td class="govuk-table__cell">
        <div class="govuk-!-margin-9">
-       <p>Reducing environmental impact<br>
-        Security of water supply</p>
+       <p>Improve the environment<br>
+        Improve water sustainability</p>
         </div>
       </td>
       <td class="govuk-table__cell">
@@ -236,7 +236,7 @@
       </td>
       <td class="govuk-table__cell">
       <div class="govuk-!-margin-8">
-        Improving productivity
+        Improve productivity 
       </div>
       </td>
       <td class="govuk-table__cell">
@@ -263,7 +263,7 @@
       </td>
       <td class="govuk-table__cell">
       <div class="govuk-!-margin-8">
-        Security of water supply
+        Improve water sustainability
       </div>
       </td>
       <td class="govuk-table__cell">
