country eligibility changes

--- a/app/views/current/views/water/country.html
+++ b/app/views/current/views/water/country.html
@@ -56,9 +56,7 @@
                 </summary>
                 <div class="govuk-details__text">
                     This is only for projects in England. 
-                    <a href="https://www.mygov.scot/environment-farm-marine/rural/payments-funding-grants/" target="_blank">Scotland</a>, 
-                    <a href="https://gov.wales/rural-grants-payments" target="_blank">Wales</a> and 
-                    <a href="https://www.daera-ni.gov.uk/topics/grants-and-funding" target="_blank">Northern Ireland<a> have similar grants available. 
+                    <p>Scotland, Wales and Northern Ireland have other grants available.</p> 
                 </div>
               </details>
           </fieldset>
